--- a/b1.html
+++ b/b1.html
@@ -7,6 +7,8 @@
     <title>Sample 2</title>
 </head>
 <body>
-    <P>Paragraph Tag</P>
+    <P>Sayan</P>
+    <p>hati.sayan55@gmail.com</p>
+
 </body>
 </html>
