--- a/Fitnesstic.html
+++ b/Fitnesstic.html
@@ -1,4 +1,66 @@
-<Doctype html lang="en"><script>window._wordtune_extension_installed = true;</script><!--<![endif]--><head>
-    <title>
-    FITNESSTIC - Now Or Never
-    </title>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Fitness Page</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="Fitnesstic.css">
+</head>
+<body>
+	<header>
+		<div class="icon">
+			<img src="https://github.com/SayanHati1998/Team-5_project-JFSJD/blob/main/Picsart_23-04-02_20-10-13-089.png?raw=true">
+			<div class = "name">
+			<h1 id="name">Don't settle for average </h1>
+				<!--<h3 id="sub">Feel Great Inside & Outside</h3> -->
+		</div>
+		<div id="navbar">
+		<nav>
+			<ul>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#services">Services</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+		</div>
+	</header>
+	<main>
+		<section id="home">
+			<h2 id="welcome">Welcome to our Fitness Page!</h2>
+			<p>Stay healthy and fit with our range of services.</p>
+			<a href="#services">View our services</a>
+		</section>
+		<section id="about">
+			<h2>About Us</h2>
+			<p>We are a team of certified fitness experts who are dedicated to helping people achieve their health and fitness goals.</p>
+		</section>
+		<section id="services">
+			<h2>Our Services</h2>
+			<ul>
+				<li><strong>Personal Training:</strong> One-on-one training sessions with a certified trainer.</li>
+				<li><strong>Group Classes:</strong> Fun and challenging group fitness classes.</li>
+				<li><strong>Nutrition Coaching:</strong> Expert guidance on healthy eating habits and meal planning.</li>
+			</ul>
+		</section>
+		<section id="contact">
+			<h2>Contact Us</h2>
+			<form action="#" method="post">
+				<label for="name">Name:</label>
+				<input type="text" id="name" name="name" required><br>
+
+				<label for="email">Email:</label>
+				<input type="email" id="email" name="email" required><br>
+
+				<label for="message">Message:</label>
+				<textarea id="message" name="message" required></textarea><br>
+
+				<input type="submit" value="Submit">
+			</form>
+		</section>
+	</main>
+	<footer>
+		<p>&copy; 2023 Fitness Page. All rights reserved.</p>
+	</footer>
+</body>
+</html>
