--- a/food.html
+++ b/food.html
@@ -8,11 +8,21 @@
 		body {
   margin: 0 ;
   font-family: sans-serif;
-  font-size: 17px;
+  font-size: 17px; 
   }
+ a {
+ 	color: whitesmoke;
+ }
 	</style>
 </head>
 <body style="background-image: url(https://img.freepik.com/free-photo/top-view-indian-food-frame-with-copy-space_23-2148747713.jpg?w=1060&t=st=1679730931~exp=1679731531~hmac=53cdac050c55d802e04f9c1c7cc82d3dcf2c6304c5cedfde7431e0cf74498dba) ;">
-
+	<nav style="text-align: center;">
+		<a target="_blank" href="">Home</a>
+		<a target="_blank" href="">**temp kink's page**</a>
+		<a target="_blank" href="">**temp sayan's page**</a>
+		<a target="_blank" href="">**temp Antara's page**</a>
+		<a target="_blank" href="">**temp Trina's page**</a>
+		<a target="_blank" href="">**temp About the creator**</a>
+	</nav>
 </body>
 </html>
