--- a/Project _ Antara Banerjee/Dance.html
+++ b/Project _ Antara Banerjee/Dance.html
@@ -6,21 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Dance.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-    <link rel="icon" href="https://github.com/SayanHati1998/Team-5_project-JFSJD/blob/main/pngwing.com.png?raw=true">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia|Trirong|Audiowide">
+       <link rel="icon" href="https://github.com/SayanHati1998/Team-5_project-JFSJD/blob/main/pngwing.com.png?raw=true">
     </head>
     <body >
     <div class="icon">
-    <img src="https://raw.githubusercontent.com/SayanHati1998/Team-5_project-JFSJD/6d5af3844e433fc09f8c8bf7d387f76735e56394/Danceicon.png">
+    <img src="https://yt3.googleusercontent.com/ytc/AL5GRJXnwCfG4AZesFK5sKWnM3miaMA9SLaaJzuF7w=s900-c-k-c0x00ffffff-no-rj">
     </div>
     <font id="slogan">Rhythm of your Life</font>
-    <div class="navbar">
+    <div class="descrip">
+    <p>: Most Popular Classical Dances Form Of India :</p>
+   
+     </div>
+   
+        <div class="navbar">
     <a href="file:///E:/Team%205%20project/Dance.html#">HOME</a>
     <a href="#">EVENT</a>
     <a href="https://insider.in/danceyourstyle/event">BLOGS</a>
     <a href="#">EXPART</a>
+   <a href="#">ABOUT US</a>
      </div>
-     <div class="nataraj">
+  <!--  <div class="img1">
+        <img  src="https://raw.githubusercontent.com/SayanHati1998/Team-5_project-JFSJD/680ed39b9d1bb29050dceed6330d8be6ce788b38/Project%20_%20Antara%20Banerjee/trident.png">
+        </div> 
+       <div class="banner">
+			<div class="intro">
+				<h2>Most popular classical dances form of india</h2>
+				<button class="btn">Contact Now</button>
+			</div>
+		</div>-->
+           <div class="nataraj">
         <img src="https://raw.githubusercontent.com/SayanHati1998/Team-5_project-JFSJD/641187a273a43697bb15711761335d52dc0dd7d9/Nataraj.png">
 
      </div>
@@ -44,5 +59,6 @@
     <script>
         $('.slide').hiSlide();
     </script>
+    
 </body>
 </html>
